# device-selector

./: .gitignore  README.md  pyproject.toml
device_selector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_device_selector.py
