[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device-selector"
version = "0.1.0"
description = "A small library for selecting the best device for PyTorch"
authors = [
  { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.8"
dependencies = [
  "torch>=1.9.0"
]
